src/styles/pages/_home.scss
/**
* ----------------------------
*   Homepage Related Styles  *
* ----------------------------
 */

.content-slider {
  position: relative;
  font-family: $base-font-family;
  margin: 100px 0;

  .slider-content {
    position:relative;
    width:43%;
    .section-title {
      h2 { font-size:35px; font-weight: 700; }
      p { margin-top:20px; }

      .btn-start-now {
        font-family: $base-font-family;
        font-weight: normal;
      }
    }

  }

  .slider-image {
    position: absolute;
    width:1210px;
    height:683px;
    // top: -240px;
    top: -85%;
    z-index: -1;
    // right: 40px;
    right: -13%;
  }

}

.content-slider.slider-small {
  margin:140px;
}

.section-boxes {
  font-family:$base-font-family;
  margin-top:350px;

  .section-title {
    width: 70%;
    margin:0 auto;
  }

  .icon-boxes {
    margin: 10px 0;
  }
}

.section-platforms {
  margin:150px 0;
  .platform-buttons {
    a {
      font-family:$base-font-family;
      font-size:16px;
      font-weight: normal;
      width:30%;
      margin-right:10px;
    }
  }

  .content-slider.slider-small {
    .slider-image {
      top: -245px;
      right: -490px;
    }
  }

}

.section-investment-tools {
  margin:100px 0;
  .content-card {
    font-family: $base-font-family;
    box-shadow: 0 0 20px 0 rgba(212, 215, 221, 0.74);
    padding:20px;
    height:390px;

    .header {

      img {
        width:74px;
        height:74px;
        margin-right: 10px;
      }

      span {
        font-family:$base-font-family;
        font-weight: bold;
        font-size:20px;
      }

    }

    .body {
      height:210px;
      margin-top:15px;
      font-size:14px;
      color:$description-text-color;
      font-weight: normal;
    }

    .footer {
      margin-top:20px;
    }
  }

  .content-slider.slider-small {
    .slider-image {
      top: -245px;
      right: -390px;
    }
  }

}

.section-why-us {
  margin-top: 250px;
  position: relative;
  .why-carsi-fx-bg img {
    position: absolute;
    left:-760px;
    top: -120px;
    z-index: -1;
  }

  .btn-why-us {
    width:$base-button-width;
  }

}

.section-news {
  font-family: $base-font-family;
  margin-top:320px;
  margin-bottom: 30px;

  .section-title {
    width: 80%;
    margin: 0 auto;
  }

  .news-container {
    margin-top:20px;
  }


  // featured news styles

  .news-card.news-featured {
    border:none;
    margin-bottom: 50px;
    .news-title {
      font-size:30px;
      font-weight: bold;
      margin-bottom:20px;
    }
    .news-body {
      margin-bottom: 20px;
      text-align: justify;
    }

    .btn-detail {
      width:$base-button-width;
    }
  }

  // regular styles for normal news

  .news-card {
    margin:20px 0;
    border-bottom: 1px solid $news-border-color;
    padding-bottom: 20px;
    .news-title {
      font-size:18px;
      font-weight: bold;
    }
    .body {
      color:$news-body-color;
      text-align: justify;
    }
    .details {
      margin-top:5px;
      a, span {
        display:inline-block;
        width:49%;
      }
      a {
        text-align: right;
      }
    }
  }

}

.section-mobile-actions {
  margin:50px 0;

  .mobile-platform-box.box-gray {
    background:$mobile-platform-bg;
  }

  .mobile-platform-box {
    padding:20px;
    font-family:$base-font-family;
    width:49%;
    display:inline-block;

    .platform-icon, .platform-name {
      display:block;
    }

    .platform-icon {
      font-size:45px;
    }

    .platform-name {
      margin:20px 0;
      color:$base-link-color;
      font-weight: bold;
    }

    .platform-description {
      font-size:16px;
      color:$description-text-color;
    }

    .btn-download {
      margin-top:10px;
      width:180px;
      text-align: center;
    }



  }
}


/**
* ----------------------------
*    Responsive Styles      *
* ----------------------------
**/

@media only screen and(max-width: $xxx-large) {
  .content-slider {
    .slider-image {
      top: -220px;
      right: 0;
    }
  }

  .content-slider.slider-small {
    .slider-image {
      top: -245px;
      right: -40px;
      width:860px;
    }
  }

}

@media only screen and(max-width: $xx-large) {
  body, html { overflow-x: hidden }
  .content-slider {
    .slider-image {
      top: -85%;
      right: -13%;
      width:860px;
    }
  }

  .content-slider.slider-small {
    .slider-image {
      top: -245px;
      right: -490px;
    }
  }

}

@media only screen and(max-width: $x-large) {
  body, html { overflow-x: hidden }
  .content-slider {
    .slider-image {
      top: -220px;
      right: -35%;
      width:860px;
    }
  }

  .content-slider.slider-small {
    .slider-image {
      top: -245px;
      right: -490px;
    }
  }

}

@media only screen and(max-width: $large) {
  body, html { overflow-x: hidden }
  .content-slider {
    .slider-image {
      top: -110%;
      right: -50%;
    }
  }

  .section-title h2 {
    font-size: 30px !important;
  }

  .section-boxes {
    margin-top: 220px;
  }

}

@media only screen and (max-width: $x-small) {
  .content-slider {
    width:100%;
    margin-top:380px;
    margin-bottom: 20px;
    .slider-content {
      width:100%;
    }
    .slider-image {
      background-size: contain !important;
      width:395px;
      height:225px;
      top: -320px;
      right: -70px;
    }
  }

  .section-title h2 {
    font-size: 30px !important;
  }

  .section-boxes {
    margin-top:150px;

    .section-title {
      width:91%;
      text-align: left;
    }
  }

  .section-platforms {
    text-align: left;
    margin-top:70px;
    .platform-buttons {
      margin-bottom: 20px;
      a { width:40%; }
    }
  }

  .section-why-us {

    position: relative;
    margin-top: 170px;
    text-align: left;

    .why-carsi-fx-bg {
      width: 391px;
      height: 626px;
      position: absolute;
      background: url("../images/Neden_CarsiFX.png") no-repeat;
      left: -70px;
      background-size: contain;
      top: -90px;
      img { display:none; }
    }

    .section-title {
      padding-top: 150px;
    }

  }

  .section-news {
    margin-top:80px;
  }

  .section-mobile-actions {
    .mobile-platform-box {
      width:80%;
      display:block;
      margin:0 auto;
    }
    margin-bottom: 300px;
  }

}

